packages/pico_view/lib/src/pico_view_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Initialize the Dart DL API and store the SendPort native handle for the
/// engine event push channel. Call once at startup with the pointer from
/// `NativeApi.initializeApiDLData`. Returns 0 on success; -1 when the Dart DL
/// API could not be initialized (header/SDK version mismatch) -- fatal: no
/// events will ever be delivered.
///
/// Events arrive on the SendPort as Uint8List payloads, each one encoded
/// `picoview.ffi.PvEvent` message (touch / link transitions / OTA progress).
/// Link events are posted on transitions only (the engine reconnects on its
/// own; UNAUTHORIZED means the attached device failed hardware attestation).
@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Void>, ffi.Int64)>()
external int pv_init(ffi.Pointer<ffi.Void> api_data, int send_port);

/// Handle one control-plane request: decode `req_len` bytes at `req` as an
/// encoded `picoview.ffi.PvRequest`, execute it, and return the encoded
/// `PvResponse` via `resp`/`resp_len`. The caller owns the returned buffer and
/// MUST release it with pv_free.
///
/// Returns 0 whenever a response was produced -- including `error` responses
/// (per-request failures travel inside the PvResponse, not as return codes);
/// -1 only when no response could be produced (null pointer or undecodable
/// request bytes), in which case `resp`/`resp_len` are untouched.
///
/// Cheap requests (sys_sample) answer synchronously in the response; long
/// operations (open_device, ota_start) answer `ack` and complete via PvEvent
/// on the pv_init SendPort.
@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.UintPtr,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
    ffi.Pointer<ffi.UintPtr>,
  )
>()
external int pv_request(
  ffi.Pointer<ffi.Uint8> req,
  int req_len,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> resp,
  ffi.Pointer<ffi.UintPtr> resp_len,
);

/// Free a response buffer returned by pv_request. Null is a no-op. `len` must
/// be the exact length pv_request reported for the pointer.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Uint8>, ffi.UintPtr)>()
external void pv_free(ffi.Pointer<ffi.Uint8> ptr, int len);

/// Push one RGBA8888 frame (len == width*height*4) to the panel. Fire-and-forget.
/// The hot path: deliberately raw (no protobuf) -- a full frame is ~518 KB.
/// Returns 0 if enqueued; -1 no device open; -2 enqueue failed.
@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.UintPtr,
    ffi.Uint32,
    ffi.Uint32,
  )
>()
external int pv_lcd_flush(
  ffi.Pointer<ffi.Uint8> rgba_ptr,
  int len,
  int width,
  int height,
);

/// Stop the worker, close the device, and free the host telemetry sampler.
/// Idempotent; blocks until the device is fully torn down. Returns 0.
@ffi.Native<ffi.Int32 Function()>()
external int pv_close();
